<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".Form">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/startApp"
        android:background="@drawable/rounded_btn"
        android:layout_gravity="center"
        android:layout_marginTop="15dp">
        <View
            android:layout_width="350dp"
            android:layout_height="60dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Start App"
                    android:textColor="@color/white"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:textSize="16sp"/>

                <Button
                    android:id="@+id/clickHere"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginStart="110dp"
                    android:background="@color/cardview_dark_background"
                    android:text="Click here"
                    android:textColor="@color/white"
                    tools:ignore="HardcodedText" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="50dp"
                    android:src="@drawable/right_arrow" />


            </LinearLayout>

    </FrameLayout>

<!--    <Button-->
<!--        android:layout_width="180dp"-->
<!--        android:layout_height="60dp"-->
<!--        android:layout_marginLeft="180dp"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:text="oval"-->
<!--        android:textColor="#388e3c"-->
<!--        android:background="@drawable/rounded_btn"/>-->

<!--    <Button-->
<!--        android:layout_width="180dp"-->
<!--        android:layout_height="60dp"-->
<!--        android:layout_marginLeft="180dp"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:backgroundTintMode="src_over"-->
<!--        android:text="rectangle"-->
<!--        android:textColor="#FFFF"-->
<!--        android:backgroundTint="@null"-->
<!--        android:background="@drawable/rounded_btn"/>-->


    <!--
        TextView
        ImageView
        ImageButton
        Icon

        Edittext
        Edittext In Details
        Types of Button
            1 : Regular Button.
        Custom Shape Creation
        Custom Button
     -->

<!--    <Button-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:id="@+id/regularBtn"-->
<!--        android:text="@string/click_me"-->
<!--        />-->

<!--    <ImageButton-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:src="@drawable/download"-->
<!--        android:id="@+id/imageExampleBtn"-->
<!--        />-->

<!--    <ToggleButton-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"/>-->

<!--    <Switch-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"/>-->


<!--    <Button-->
<!--        android:id="@+id/customBtn"-->
<!--        android:background="@drawable/rounded_btn"-->
<!--        android:layout_width="100dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_weight="1"-->
<!--        android:text="@string/custom"-->
<!--        tools:ignore="Suspicious0dp" />-->




    <!--Title -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_registaration"
        android:textSize="18sp"
        android:textColor="#000"
        android:layout_gravity="center"
        android:paddingBottom="16dp"
        />

    <!-- Name -->
    <EditText
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:layout_margin="20dp"
        />

    <!-- Email -->
    <EditText
        android:id="@+id/userEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:layout_margin="20dp"
        />


    <!-- Phone No -->
    <EditText
        android:id="@+id/userPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_mobile_no"
        android:inputType="phone"
        android:padding="10dp"
        android:layout_margin="20dp"
        tools:ignore="TextFields"/>


    <!-- Password Input -->
    <EditText
        android:id="@+id/userPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:layout_margin="20dp"
        tools:ignore="TextFields"/>


    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingTop="16dp">

        <!-- submit button-->

        <Button
            android:id="@+id/submitButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:backgroundTintMode="add"
            android:text="@string/submit"
            app:cornerRadius="24dp"
            android:textColor="@color/white"
            tools:ignore="Suspicious0dp" />

        <!-- clear button-->
        <Button
            android:id="@+id/clearButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:backgroundTintMode="add"
            android:text="@string/clear"
            app:cornerRadius="24dp"
            android:textColor="@color/white"
            tools:ignore="Suspicious0dp" />
    </LinearLayout>


    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/this_is_a_image_of_a_person"
        android:src="@drawable/download"
        android:layout_gravity="center"
        />


    <ImageButton
        android:id="@+id/imageBtn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/this_is_a_image_of_a_person"
        android:src="@drawable/download"
        android:layout_gravity="center"
        android:scaleType="fitCenter"
        />














</LinearLayout>